# small-string-buffer

./: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  example.cpp  format.sh  test.cpp
include/smallstring/: smallstring.hpp
tests/: smallstring_simple_test.cpp
